--- a/lab4/index.html
+++ b/lab4/index.html
@@ -21,12 +21,12 @@
                 <div class="logo">MNTN</div>
                 <div class="nav">
                     <ul>
-                        <li><a href="#" class="Equipment"></a>Equipment</li>
-                        <li><a href="#" class="About us"></a>About us</li>
-                        <li><a href="#" class="Blog"></a>Blog</li>
+                        <li><a href="#" class="Equipment"></a>Оснащение</li>
+                        <li><a href="#" class="About us"></a>О нас</li>
+                        <li><a href="#" class="Blog"></a>Блог</li>
                     </ul>  
                 </div>
-                <a href="#" class="account">Account</a>
+                <a href="#" class="account">Аккаунт</a>
             </div> 
         </div>
     </nav>
@@ -34,9 +34,9 @@
     <a href="#" class="hero">
         
 
-        <div class="hero-category">A Hiking guide</div>
-        <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
-            <p class="hero-scroll">scroll down</p> 
+        <div class="hero-category">Путеводитель</div>
+        <h1 class="hero-title">Будьте готовы к горам и за их пределами!</h1>
+            <p class="hero-scroll">Прокрутить вниз</p> 
 
     </a>
 </header> 
@@ -46,13 +46,13 @@
 
         <article class="article">
             <div class="article-text" data-number="01">
-                <div class="article-subtitle">GEt Started</div>
-                <div class="article-title">What level of  hiker are you?</div>
-                <p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p>
-                <div class="article-read-more"> read more</div>             
+                <div class="article-subtitle">Начало</div>
+                <div class="article-title"> Какой у тебя уровень туриста?</div>
+                <p>Определение вашего уровня любителя походов может стать важным инструментом при планировании будущих походов. Это руководство по уровню походов поможет вам спланировать походы в соответствии с различными рейтингами походов, установленными различными веб-сайтами, такими как All Trails и Modern Hiker. К какому типу туристов вы относитесь — новичок, средний уровень, продвинутый средний уровень, эксперт или опытный турист? </p>
+                <div class="article-read-more"> Читать дальше</div>             
             </div> 
             <div class="article-img">
-                <img src="./img/pictures/01.jpg" alt="What level of  hiker are you?">
+                <img src="./img/pictures/01.jpg" alt="Какой у тебя уровень туриста?">
 
             </div>    
 
@@ -61,14 +61,14 @@
 
         <article class="article">
             <div class="article-text" data-number="02">
-                <div class="article-subtitle">Hiking Essentials</div>
-                <div class="article-title">Picking the right Hiking Gear!</div>
-                <p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
-                    Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet. </p>
-                <div class="article-read-more"> read more</div>             
+                <div class="article-subtitle">Основы походов</div>
+                <div class="article-title">Правильный выбор походного снаряжения!</div>
+                <p>Самое приятное в походе то, что вам не нужно никакого специального снаряжения, возможно, вам сойдет с рук то, что у вас уже есть.
+Начнем с одежды. Типичная ошибка новичков в походах — ношение джинсов и обычной одежды, которая станет тяжелой и натирает, если они вспотеют или намокнут. </p>
+                <div class="article-read-more">Читать дальше</div>             
             </div> 
             <div class="article-img">
-                <img src="./img/pictures/02.jpg" alt="Picking the right Hiking Gear!">
+                <img src="./img/pictures/02.jpg" alt="Правильный выбор походного снаряжения!">
 
             </div>    
 
@@ -78,12 +78,12 @@
         <article class="article">
             <div class="article-text" data-number="03">
                 <div class="article-subtitle">Where you go is the key</div>
-                <div class="article-title">Understand Your Map & Timing</div>
-                <p>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction.. </p>
-                <div class="article-read-more"> read more</div>             
+                <div class="article-title">Куда вы идете - это ключ</div>
+                <p>Для начала распечатайте путеводитель и карту. Если идет дождь, бросьте их в пакет с застежкой-молнией. Прочтите руководство, изучите карту и получите хорошее представление о том, чего ожидать. Мне нравится знать, какой будет мой следующий ориентир во время похода. Например, я прочитаю путеводитель и знаю, что, скажем, через милю я на перекрестке поворачиваю направо.. </p>
+                <div class="article-read-more"> Читать дальше</div>             
             </div> 
             <div class="article-img">
-                <img src="./img/pictures/03.jpg" alt="Understand Your Map & Timing">
+                <img src="./img/pictures/03.jpg" alt="Поймите свою карту и время">
 
             </div>    
 
