--- a/lab4/index.html
+++ b/lab4/index.html
@@ -103,7 +103,7 @@
                 <div class="footer-copyright-logo">
                     <div class="logo">MNTN</div>
                 </div>
-                <p class="footer-copyright-desc">Get out there & discover your next slope, mountain & destination!</p>
+                <p class="footer-copyright-desc">Отправляйтесь туда и откройте для себя следующий склон, гору и пункт назначения!</p>
                 <p class="footer-copyright-terms">Copyright 2019 MNTN, Inc. Terms & Privacy</p>            
             </div>
 
